fixing wrong function

--- a/Desafio2/src/app/views/auth/signup.njk
+++ b/Desafio2/src/app/views/auth/signup.njk
@@ -26,7 +26,7 @@
     var avatarInput = document.getElementById('avatar')
     var img = document.querySelector('label[for=avatar] img')
 
-    avatarInput.onChange = function(e) {
+    avatarInput.onchange = function(e) {
       img.classList.add('preview')
       img.src = URL.createObjectURL(e.target.files[0])
     }
