Adding Barber's Scheduling View

--- a/Desafio2/src/app/views/dashboard.njk
+++ b/Desafio2/src/app/views/dashboard.njk
@@ -17,6 +17,10 @@
       {% endfor %}
     </ul>
 
+    {% if (user.provider === true) %}
+      <a href="/app/schedule" class="agendamentos"> Meus Agendamentos </a>
+    {% endif %}
+
     <a href="/app/logout" class="logout"> Sair </a>
   </div>
 {% endblock %}
